add endpoint for getting book token recommendation
